--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,38 @@
+# Dependencies
 node_modules/
+
+# Build output
 dist/
+build/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# OS
+.DS_Store
+Thumbs.db
+Desktop.ini
+
+# IDE / Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Cache
+.cache/
+.parcel-cache/
+.vite/
+
+# Misc
+*.bak
+*.tmp
